--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = { version = "0.3.26", default-features = false }
-ureq = { version = "2.5.0", features = ["socks-proxy"] }
 url = "2.3.1"
+argh = "0.1.10"
+exact-reader = "0.1.1"
+binrw = { version = "0.11.2", default-features = false, features = ["std"] }
+ureq = { version = "2.5.0", features = ["socks-proxy"] }
